# mlops_MNIST

./: Makefile  README.md  data.py  main.py  pyproject.toml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.py
s2m6assign/: __init__.py  main.py
